--- a/devcontainer.json
+++ b/devcontainer.json
@@ -1,14 +1,15 @@
 {
   "name": "SOC Automation",
-  "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
-  "features": {
-    "ghcr.io/devcontainers/features/docker-in-docker:1": {},
-    "ghcr.io/devcontainers/features/python:1": {}
-  },
-  "forwardPorts": [3001, 9000],
+  "dockerComposeFile": "docker-compose.yml",
+  "service": "soc",
+  "workspaceFolder": "/workspace",
+  "forwardPorts": [8080, 5000],
   "customizations": {
     "vscode": {
-      "extensions": ["ms-python.python"]
+      "extensions": [
+        "ms-python.python",
+        "redhat.vscode-yaml"
+      ]
     }
   }
 }
