--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,38 @@
-version: '3'
+version: '3.8'
+
 services:
+  soc:
+    image: python:3.9-slim
+    volumes:
+      - ..:/workspace
+    working_dir: /workspace
+    ports:
+      - "8080:8080"
+      - "5000:5000"
+    command: sleep infinity
+
+  # Elasticsearch for log storage
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.9.0
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - ES_JAVA_OPTS=-Xms1g -Xmx1g
+    ports:
+      - "9200:9200"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:9200/_cluster/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # TheHive for case management
   thehive:
-    image: strangetrails/thehive:latest
+    image: strangebee/thehive:5.2.0
+    environment:
+      - JVM_OPTS=-Xmx1g
     ports:
       - "9000:9000"
-    environment:
-      - CORTEX_URL=http://localhost:9001
-    volumes:
-      - thehive-data:/opt/thp/thehive/data
-
-  shuffle:
-    image: frikky/shuffle:latest
-    ports:
-      - "3001:3001"
-    environment:
-      - SHUFFLE_AUTO_START=true
-
-volumes:
-  thehive-data:
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
