--- a/devcontainer.json
+++ b/devcontainer.json
@@ -1,15 +1,17 @@
 {
-  "name": "SOC Automation",
+  "name": "SOC Automation Environment",
   "dockerComposeFile": "docker-compose.yml",
   "service": "soc",
   "workspaceFolder": "/workspace",
-  "forwardPorts": [8080, 5000],
+  "forwardPorts": [9000, 9200, 5601],
   "customizations": {
     "vscode": {
       "extensions": [
         "ms-python.python",
+        "elastic.vscode-elasticsearch",
         "redhat.vscode-yaml"
       ]
     }
-  }
+  },
+  "postCreateCommand": "pip install -r requirements.txt"
 }
