--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,8 @@ services:
     volumes:
       - ..:/workspace
     working_dir: /workspace
-    ports:
-      - "8080:8080"
-      - "5000:5000"
     command: sleep infinity
 
-  # Elasticsearch for log storage
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.9.0
     environment:
@@ -21,12 +17,16 @@ services:
     ports:
       - "9200:9200"
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:9200/_cluster/health || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      test: ["CMD-SHELL", "curl -f http://localhost:9200 || exit 1"]
 
-  # TheHive for case management
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.9.0
+    ports:
+      - "5601:5601"
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+
   thehive:
     image: strangebee/thehive:5.2.0
     environment:
